--- a/index.html
+++ b/index.html
@@ -10,18 +10,22 @@
 
 <body>
     <div id="heading">
-        <div>
-            <h1 id="heading-title"> "Bildung am Boden - Maßnahmenpaket stoppen!" </h1>
-            Eine Kundgebung gegen das Maßnahmenpaket des sächsischen Kultusministeriums.
-        </div>
-        <div class="theme-switch-wrapper">
-            <label class="theme-switch" for="checkbox">
-                <input type="checkbox" id="checkbox" />
-                <div class="slider round"></div>
-            </label>
-        </div>
+        <h1 id="heading-title"> "Bildung am Boden - Maßnahmenpaket stoppen!" </h1>
+    </div>
+    <div id="sub-heading">
+        Eine Kundgebung gegen das Maßnahmenpaket des sächsischen Kultusministeriums am 19.06.2025
     </div>
     <div id="infos">
+        <div class="info">
+            <h2 id="forderungen">FORDERUNGEN</h2>
+            <ul id="forderungen-liste">
+                <li class="forderung">Mehr Geld für Bildung!</li>
+                <li class="forderung">Mehr Lehrkräfte!</li>
+                <li class="forderung">Stärkung multiprofessioneller Teams!</li>
+                <li class="forderung">Kleinere Klassen und Kurse!</li>
+                <li class="forderung">Maßnahmenpaket stoppen!</li>
+            </ul>
+        </div>
         <div class="info">
             <h2 id="ablauf">ABLAUF</h2>
             <h3>Start</h3>
@@ -34,18 +38,7 @@
             <h3>Ende</h3>
             18:15 Uhr
         </div>
-        <div class="info">
-            <h2 id="forderungen">FORDERUNGEN</h2>
-            <ul id="forderungen-liste">
-                <li class="forderung">Mehr Geld für Bildung!</li>
-                <li class="forderung">Mehr Lehrkräfte!</li>
-                <li class="forderung">Stärkung multiprofessioneller Teams!</li>
-                <li class="forderung">Kleinere Klassen und Kurse!</li>
-                <li class="forderung">Maßnahmenpaket stoppen!</li>
-            </ul>
-        </div>
     </div>
-    <script src="js/script.js"> </script>
 </body>
 
 </html>
