feat: Add ical event

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
         <h1 id="heading-title"> "Bildung am Boden - Maßnahmenpaket stoppen!" </h1>
     </div>
     <div id="sub-heading">
-        Eine Kundgebung gegen das Maßnahmenpaket des sächsischen Kultusministeriums am 19.06.2025
+        Eine Kundgebung gegen das Maßnahmenpaket des sächsischen Kultusministeriums am
+        <a href="webcal://ical/kundgebung.ics">19.06.2025</a>
     </div>
     <div id="infos">
         <div class="info">
