--- a/index.html
+++ b/index.html
@@ -14,30 +14,34 @@
     </div>
     <div id="sub-heading">
         Eine Kundgebung gegen das Maßnahmenpaket des sächsischen Kultusministeriums am
-        <a href="webcal://ical/kundgebung.ics">19.06.2025</a>
+        <a href="ical/kundgebung.ics">19.06.2025</a>
     </div>
     <div id="infos">
         <div class="info">
             <h2 id="forderungen">FORDERUNGEN</h2>
-            <ul id="forderungen-liste">
-                <li class="forderung">Mehr Geld für Bildung!</li>
-                <li class="forderung">Mehr Lehrkräfte!</li>
-                <li class="forderung">Stärkung multiprofessioneller Teams!</li>
-                <li class="forderung">Kleinere Klassen und Kurse!</li>
-                <li class="forderung">Maßnahmenpaket stoppen!</li>
-            </ul>
+            <div class="info-content">
+                <ul id="forderungen-liste">
+                    <li class="forderung">Mehr Geld für Bildung!</li>
+                    <li class="forderung">Mehr Lehrkräfte!</li>
+                    <li class="forderung">Stärkung multiprofessioneller Teams!</li>
+                    <li class="forderung">Kleinere Klassen und Kurse!</li>
+                    <li class="forderung">Maßnahmenpaket stoppen!</li>
+                </ul>
+            </div>
         </div>
         <div class="info">
             <h2 id="ablauf">ABLAUF</h2>
-            <h3>Start</h3>
-            Sächsisches Kultusministerium<br>
-            <a href="https://www.openstreetmap.org/node/899040513">Carolaplatz 1, 01097 Dresden</a>
-            16:30 Uhr
-            <h3>Zwischenstopp</h3>
-            <a href="https://www.openstreetmap.org/way/247571347#map=19/51.051283/13.740757">Neumarkt</a>
-            17:30 Uhr
-            <h3>Ende</h3>
-            18:15 Uhr
+            <div class="info-content">
+                <h3>Start</h3>
+                Sächsisches Kultusministerium<br>
+                <a href="https://www.openstreetmap.org/node/899040513">Carolaplatz 1, 01097 Dresden</a>
+                16:30 Uhr
+                <h3>Zwischenstopp</h3>
+                <a href="https://www.openstreetmap.org/way/247571347#map=19/51.051283/13.740757">Neumarkt</a>
+                17:30 Uhr
+                <h3>Ende</h3>
+                18:15 Uhr
+            </div>
         </div>
     </div>
 </body>
