fix: Make links open in new tab

--- a/index.html
+++ b/index.html
@@ -34,10 +34,11 @@
             <div class="info-content">
                 <h3>Start</h3>
                 Sächsisches Kultusministerium<br>
-                <a href="https://www.openstreetmap.org/node/899040513">Carolaplatz 1, 01097 Dresden</a>
+                <a target="_blank" href="https://www.openstreetmap.org/node/899040513">Carolaplatz 1, 01097 Dresden</a>
                 16:30 Uhr
                 <h3>Zwischenstopp</h3>
-                <a href="https://www.openstreetmap.org/way/247571347#map=19/51.051283/13.740757">Neumarkt</a>
+                <a target="_blank"
+                    href="https://www.openstreetmap.org/way/247571347#map=19/51.051283/13.740757">Neumarkt</a>
                 17:30 Uhr
                 <h3>Ende</h3>
                 18:15 Uhr
