feat: Add footer and orga info

--- a/index.html
+++ b/index.html
@@ -9,42 +9,58 @@
 </head>
 
 <body>
-    <div id="heading">
-        <h1 id="heading-title"> "Bildung am Boden - Maßnahmenpaket stoppen!" </h1>
-    </div>
-    <div id="sub-heading">
-        Eine Kundgebung gegen das Maßnahmenpaket des sächsischen Kultusministeriums am
-        <a href="ical/kundgebung.ics">19.06.2025</a>
-    </div>
-    <div id="infos">
-        <div class="info">
-            <h2 id="forderungen">FORDERUNGEN</h2>
-            <div class="info-content">
-                <ul id="forderungen-liste">
-                    <li class="forderung">Mehr Geld für Bildung!</li>
-                    <li class="forderung">Mehr Lehrkräfte!</li>
-                    <li class="forderung">Stärkung multiprofessioneller Teams!</li>
-                    <li class="forderung">Kleinere Klassen und Kurse!</li>
-                    <li class="forderung">Maßnahmenpaket stoppen!</li>
-                </ul>
+    <header>
+        <div id="heading">
+            <h1 id="heading-title"> "Bildung am Boden - Maßnahmenpaket stoppen!" </h1>
+        </div>
+        <div id="sub-heading">
+            Eine Kundgebung gegen das Maßnahmenpaket des sächsischen Kultusministeriums am
+            <a href="ical/kundgebung.ics">19.06.2025</a>.<br>
+            Initiiert von Lehrkräften des Gymnasiums Dresden-Plauen mit Unterstützung der
+            <a href="https://www.gew.de">GEW</a>.
+        </div>
+    </header>
+    <main>
+        <div id="infos">
+            <div class="info">
+                <h2 id="forderungen">FORDERUNGEN</h2>
+                <div class="info-content">
+                    <ul id="forderungen-liste">
+                        <li class="forderung">Mehr Geld für Bildung!</li>
+                        <li class="forderung">Mehr Lehrkräfte!</li>
+                        <li class="forderung">Stärkung multiprofessioneller Teams!</li>
+                        <li class="forderung">Kleinere Klassen und Kurse!</li>
+                        <li class="forderung">Maßnahmenpaket stoppen!</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="info">
+                <h2 id="ablauf">ABLAUF</h2>
+                <div class="info-content">
+                    <h3>Start</h3>
+                    Sächsisches Kultusministerium<br>
+                    <a target="_blank" href="https://www.openstreetmap.org/node/899040513">Carolaplatz 1, 01097
+                        Dresden</a>
+                    16:30 Uhr
+                    <h3>Zwischenstopp</h3>
+                    <a target="_blank"
+                        href="https://www.openstreetmap.org/way/247571347#map=19/51.051283/13.740757">Neumarkt</a>
+                    17:30 Uhr
+                    <h3>Ende</h3>
+                    18:15 Uhr
+                </div>
             </div>
         </div>
-        <div class="info">
-            <h2 id="ablauf">ABLAUF</h2>
-            <div class="info-content">
-                <h3>Start</h3>
-                Sächsisches Kultusministerium<br>
-                <a target="_blank" href="https://www.openstreetmap.org/node/899040513">Carolaplatz 1, 01097 Dresden</a>
-                16:30 Uhr
-                <h3>Zwischenstopp</h3>
-                <a target="_blank"
-                    href="https://www.openstreetmap.org/way/247571347#map=19/51.051283/13.740757">Neumarkt</a>
-                17:30 Uhr
-                <h3>Ende</h3>
-                18:15 Uhr
-            </div>
-        </div>
-    </div>
+    </main>
+    <footer>
+        <!-- <a class="footer-item" target="_blank" href="https://www.github.com/rabenstern">
+            <img class="footer-image" src="img/rabenstern_bg_big.png" alt="Rabenstern Logo">
+        </a> -->
+        <a class="footer-item" target="_blank" href="https://www.github.com/lorax42/bildungamboden">
+            <img class="footer-image" src="https://avatars.githubusercontent.com/lorax42" alt="lorax avatar">
+        </a>
+        <a class="footer-item, footer-image" target="_blank" href="https://www.mit-license.org">&#9878;</a>
+    </footer>
 </body>
 
 </html>
