fix: Update time place of 2nd stop

--- a/index.html
+++ b/index.html
@@ -43,9 +43,8 @@
                         Dresden</a>
                     16:30 Uhr
                     <h3>Zwischenstopp</h3>
-                    <a target="_blank"
-                        href="https://www.openstreetmap.org/way/247571347#map=19/51.051283/13.740757">Neumarkt</a>
-                    17:30 Uhr
+                    <a target="_blank" href="https://www.openstreetmap.org/way/20490395">Kulturpalast</a>
+                    17:45 Uhr
                     <h3>Ende</h3>
                     18:15 Uhr
                 </div>
