feat: Add background info and motivation

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     </header>
     <main>
         <div id="infos">
-            <div class="info">
-                <h2 id="forderungen">FORDERUNGEN</h2>
+            <div class="info" id="forderungen">
+                <h2>FORDERUNGEN</h2>
                 <div class="info-content">
                     <ul id="forderungen-liste">
                         <li class="forderung">Mehr Geld für Bildung!</li>
@@ -34,8 +34,8 @@
                     </ul>
                 </div>
             </div>
-            <div class="info">
-                <h2 id="ablauf">ABLAUF</h2>
+            <div class="info" id="ablauf">
+                <h2>ABLAUF</h2>
                 <div class="info-content">
                     <h3>Start</h3>
                     Sächsisches Kultusministerium<br>
@@ -47,6 +47,36 @@
                     17:45 Uhr
                     <h3>Ende</h3>
                     18:15 Uhr
+                </div>
+            </div>
+            <div class="info" id="hintergruende">
+                <h2>Hintergründe</h2>
+                <div class="info-content" id="hintergruende-content">
+                    <p>
+                        Das Schuljahr 2024/2025 geht zu Ende. Es fehlen Lehrkräfte, der Ausbau multiprofessioneller
+                        Teams kommt nur langsam voran, an 21 Schulen sollte die Sozialarbeit ganz oder teilweise
+                        gestrichen werden, was nur durch Proteste verhindert werden konnte, seit Jahren werden Klassen
+                        und Kurse größer, der Stress ist immens.
+                    </p>
+                    <p>
+                        Das Maßnahmenpaket des Kultusministeriums wird nicht helfen, die Situation zu verbessern. Die
+                        Überarbeitung der Lehrerinnen und Lehrer droht sich eher zu verschlimmern. Das wird nicht nur
+                        Auswirkungen auf Unterrichtsqualität haben, sondern droht auch die psychosoziale Betreuung der
+                        Schülerinnen und Schüler zu verschlechtern.
+                    </p>
+                    <p>
+                        Schon jetzt arbeiten Lehrerinnen und Lehrer zwischen 48 und weit mehr als 50 Stunden pro Woche
+                        wie eine Studie, die in Kooperation mit der Gewerkschaft Erziehung und Wissenschaft (GEW)
+                        Sachsen durchgeführt wurde, festgestellt hat. Die Pläne des Kultusministeriums drohen diese
+                        Überbearbeitung noch zu verschlimmern.
+                    </p>
+                    <p>
+                        Kleinere Klassen und Kurse, mehr und besser ausgestattete multiprofessionelle Teams, mehr
+                        Lehrkräfte und mehr Geld für Bildung wären wirklich nötig, um die Situation an den Schulen zu
+                        verbessern. Im drittreichsten Land der Erde wäre das Geld dafür da, es ist nur viel zu ungleich
+                        verteilt. Stattdessen sind Lehrkräfte geschafft und mit ihnen liegt die Bildung sprichwörtlich
+                        am Boden.
+                    </p>
                 </div>
             </div>
         </div>
