feat: Add migration info

--- a/index.html
+++ b/index.html
@@ -25,16 +25,11 @@
             <div class="info" id="forderungen">
                 <h2>FORDERUNGEN</h2>
                 <div class="info-content">
-                    <ul id="forderungen-liste">
-                        <li class="forderung">Mehr Geld für Bildung!</li>
-                        <li class="forderung">Mehr Lehrkräfte!</li>
-                        <li class="forderung">Stärkung multiprofessioneller Teams!</li>
-                        <li class="forderung">Kleinere Klassen und Kurse!</li>
-                        <li class="forderung">Maßnahmenpaket stoppen!</li>
-                    </ul>
+                    <h2>WIR ZIEHEN UM!</h2>
+                    In Zukunft wird unser Quellcode und die Website selber auf <a href="https://codeberg.org/bildungamboden">Codeberg</a> gehostet werden.
                 </div>
             </div>
-            <div class="info" id="ablauf">
+            <!-- <div class="info" id="ablauf">
                 <h2>ABLAUF</h2>
                 <div class="info-content">
                     <h3>Start</h3>
@@ -77,7 +72,7 @@
                         verteilt. Stattdessen sind Lehrkräfte geschafft und mit ihnen liegt die Bildung sprichwörtlich
                         am Boden.
                     </p>
-                </div>
+                </div> -->
             </div>
         </div>
     </main>
