fix: Remove superflous heading and edit style

--- a/index.html
+++ b/index.html
@@ -23,10 +23,9 @@
     <main>
         <div id="infos">
             <div class="info" id="forderungen">
-                <h2>FORDERUNGEN</h2>
-                <div class="info-content">
-                    <h2>WIR ZIEHEN UM!</h2>
-                    In Zukunft wird unser Quellcode und die Website selber auf <a href="https://codeberg.org/bildungamboden">Codeberg</a> gehostet werden.
+                <h2>WIR ZIEHEN UM!</h2>
+                <div class="info-content" style="text-align: center; font-size: large;">
+                    <b>In Zukunft wird unser Quellcode und die Website selber auf <a href="https://codeberg.org/bildungamboden">Codeberg</a> gehostet werden.</b>
                 </div>
             </div>
             <!-- <div class="info" id="ablauf">
