--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div id="infos">
             <div class="info" id="forderungen">
                 <h2>WIR ZIEHEN UM!</h2>
-                <div class="info-content" style="text-align: center; font-size: large;">
+                <div class="info-content" style="text-align: center; font-size: 2rem; padding-top: 2rem;">
                     <b>In Zukunft wird unser Quellcode und die Website selber auf <a href="https://codeberg.org/bildungamboden">Codeberg</a> gehostet werden.</b>
                 </div>
             </div>
