fix: Add link to codeberg pages site

--- a/index.html
+++ b/index.html
@@ -25,7 +25,10 @@
             <div class="info" id="forderungen">
                 <h2>WIR ZIEHEN UM!</h2>
                 <div class="info-content" style="text-align: center; font-size: 2rem; padding-top: 2rem;">
-                    <b>In Zukunft wird unser Quellcode und die Website selber auf <a href="https://codeberg.org/bildungamboden">Codeberg</a> gehostet werden.</b>
+                    <b>
+                        In Zukunft wird unser Quellcode und die Website selber auf <a href="https://codeberg.org/bildungamboden">Codeberg</a> gehostet werden.<br>
+                        Die Website ist nun unter <a href="https://bildungamboden.codeberg.page">https://bildungamboden.codeberg.page</a> zu finden!
+                    </b>
                 </div>
             </div>
             <!-- <div class="info" id="ablauf">
